--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
-    <title>Gitanjali Chouhan</title>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        .card {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+            max-width: 300px;
+            margin: auto;
+            text-align: center;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+
+        .title {
+            color: grey;
+            font-size: 18px;
+        }
+
+        button {
+            border: none;
+            outline: 0;
+            display: inline-block;
+            padding: 8px;
+            color: white;
+            background-color: #000;
+            text-align: center;
+            cursor: pointer;
+            width: 100%;
+            font-size: 18px;
+        }
+
+        a {
+            text-decoration: none;
+            font-size: 22px;
+            color: black;
+        }
+
+        button:hover,
+        a:hover {
+            opacity: 0.7;
+        }
+    </style>
 </head>
 
-<body>
-    <h1>Gitanjali Chouhan</h1>
-    <p><a href="https://www.instagram.com/gitanjali_18/">Instagram</a></p>
+<body style="padding: 80px; margin: 0;">
+    <div class="card"
+         style="padding: 20px;">
+        <h1>Gitanjali Chouhan</h1>
+        <div style="margin: 24px 0;">
+            <a href="https://www.instagram.com/gitanjali_18"><i class="fa fa-instagram"></i></a> &nbsp; <a href="https://www.facebook.com/gitanjali.chouhan.9"><i class="fa fa-facebook"></i></a>
+        </div>
+    </div>
 </body>
 
 </html>
